# Estructuras-Proyecto_2

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
data/: clients.json  destinations.json  destinations.json.backup
structures/: Client.cpp  Client.h  ClientSerializer.cpp  ClientSerializer.h  DB.cpp  DB.h  Destination.cpp  Destination.h  Edge.cpp  Edge.h  EntryPoint.cpp  EntryPoint.h  Enums.h  ListNode.cpp  ListNode.h  PathStep.cpp  PathStep.h  PromptInput.h  Reward.cpp  Reward.h  Route.cpp  Route.h  SimpleList.h  SimpleList.tpp  TravelGraph.cpp  TravelGraph.h  TravelGraphSerializer.cpp  TravelGraphSerializer.h  Trip.cpp  Trip.h  utils.cpp  utils.h
ui/: data_management.cpp  main_menu.cpp  main_menu.h  queries.cpp  reports.cpp
